Fixed Mobile home layout issue

--- a/small.css
+++ b/small.css
@@ -4,7 +4,57 @@
 .Banner{
   display: none;
 }
+#Mobileheader{
+  text-align: center;
+  font-family: 'Oleo Script', cursive;
+  font-size: 200%;
+  margin: 0%;
+  padding: 0%;
+}
+.mobilenav {
+  overflow: hidden;
+  background-color: black;
+  position: relative;
+}
 
+.mobilenav #myLinks {
+  display: none;
+}
+
+.mobilenav a {
+  color: white;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+  display: flex;
+  justify-content: center;
+}
+.mobilenav a.icon {
+  background: transparent;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+.mobilenav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+.active {
+  background-color: transparent;
+  color: white;
+}
+.bg {
+  background-image: url("/files/Images/Kyle.png");
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  background-color: black;
+  filter: grayscale(50%);
+}
 #Home {
     background-color:transparent;
     color: white;
@@ -21,32 +71,11 @@
   font-family: 'Courier New', Courier, monospace;
   height: 100%; 
 }
-
-#Mobileheader{
-  text-align: center;
-  font-family: 'Oleo Script', cursive;
-  font-size: 200%;
-  margin: 0%;
-  padding: 0%;
-}
-
-.bg {
-  background-image: url("/files/Images/Kyle.png");
-  height: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  display: flex;
-  background-color: black;
-  filter: grayscale(50%);
-}
-
 h1 {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: white;
 }
-
-main {
+.Homepage {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -55,15 +84,16 @@ main {
 }
 
 a:visited{
-    color: purple;
+    color: white;
     text-decoration: none;
 }
 a:hover{
   color: purple;
 }
 a{
-  text-decoration: none;
+  text-decoration: underline;
   text-align: center;
+  color: white;
 }
 section {
   display: flex;
@@ -120,41 +150,4 @@ article p{
 }
 section img{
   width: 100%;
-}
-.mobilenav {
-    overflow: hidden;
-    background-color: black;
-    position: relative;
-}
-  
-.mobilenav #myLinks {
-  display: none;
-}
-  
-.mobilenav a {
-  color: white;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-  display: block;
-  display: flex;
-  justify-content: center;
- }
-  
-.mobilenav a.icon {
-  background: transparent;
-  display: block;
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-  
-mobilenav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-  
-.active {
-  background-color: transparent;
-  color: white;
 }
